--- a/Time table.html
+++ b/Time table.html
@@ -3,7 +3,6 @@
 <table align="center" border="1">
 <tr><th colspan="6">Time Table</th></tr>
 <tr><th rowspan="7">Hours</th></tr>
-
 <tr>
 <td align="center">Mon</td>
 <td align="center">Tue</td>
@@ -25,8 +24,8 @@
 <td>Social</td>
 <td>Sports</td>
 </tr>
-<tr><th colspan="5">Lunch</th></tr>
-
+<tr><th colspan="5">Lunch</th>
+</tr> 
 <tr>
 <td>Science</td>
 <td>Maths</td>
